# libmajesty

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: convert.h  exact.h  function_store.h  logic_rewriting.h  maj_io.h  maj_utils.h  mig_functional_hashing_constants.hpp  mig_interface.h  truth_table_utils.hpp  xmg.h
include/minisat/: Options.h
lib/: CMakeLists.txt  conversion_utils.cpp  convert.cpp  cut.cpp  lexer.l  logic_network.cpp  maj_io.cpp  mig_interface.cpp  parser.y  strashmap.h  xmg.cpp
libmajesty/: CMakeLists.txt  libmajesty.sln  libmajesty.vcxproj  libmajesty.vcxproj.filters
libmajesty/include/: convert.h  cut.h  exact.h  function_store.h  logic_network.h  logic_rewriting.h  lut_cover.h  lut_optimize.h  maj_io.h  mig_interface.h  npn_canonization.hpp  sat_interface.h  truth_table_utils.hpp  xmg.h
libmajesty/include/minisat/: Solver.h  SolverTypes.h  Vec.h
libmajesty/majespy/: build.sh  majespy.pyx  mig_interface.pxd  pymig.pyx  setup.py
libmajesty/notebooks/: whiteboard.ipynb
libmajesty/pymajesty/: build.sh  mig_interface.pxd  pymig.pyx  setup.py
libmajesty/src/: CMakeLists.txt  convert.cpp  cut.cpp  cut.h  exact.cpp  function_store.cpp  function_store.h  lexer.l  logic_network.cpp  logic_rewriting.cpp  lut_cover.cpp  lut_cover.h  lut_optimize.cpp  lut_optimize.h  maj_io.cpp  mig_functional_hashing_constants.cpp  mig_interface.cpp  mlp.h  mlpext.cpp  mlpext.h  mlputil.c  npn_canonization.cpp  parser.y  primes.h  sat_interface.cpp  strashmap.cpp  strashmap.h  truth_table_utils.cpp  xmg.cpp
libmajesty/src/minisat/: CMakeLists.txt  IntTypes.h  Map.h  Options.cpp  Solver.cpp  Solver.h  SolverTypes.h
libmajesty/test/LibMajesty Test/: CMakeLists.txt  LibMajesty Test.vcxproj  LibMajesty Test.vcxproj.filters  main.cpp
majespy/: build.sh  majespy.pyx  mig_interface.pxd  node_utils.pxd  setup.py
notebooks/: whiteboard2.ipynb
shell/: CMakeLists.txt  commands.cpp  commands.h  game_commands.cpp  game_commands.h  majesty_shell.cpp  majesty_shell.h  shell_env.cpp  shell_env.h
src/: CMakeLists.txt  mlpext.h  mlpmemory.c  parser.y  strashmap.cpp
test/: CMakeLists.txt  main.cpp
test/LibMajesty Test/: LibMajesty Test.vcxproj
